added get operations and current balance
